Fix wrap to ReviewCard & DetailInfo

--- a/public/stylesheets/scss/detailInfo.scss
+++ b/public/stylesheets/scss/detailInfo.scss
@@ -17,4 +17,5 @@ $border: 1px solid $grey300;
 .td {
   border: $border;
   word-break: break-all;
+  white-space: pre-wrap;
 }
